Buttons into input
Buttons into input fix

--- a/popup.html
+++ b/popup.html
@@ -34,10 +34,10 @@ textarea
         <div id="errorlog">Ready</div>
         <textarea id="text"></textarea>  
         <div style="float: left;">
-          <button id="get">Send</button>
+          <input type="submit" id="send" value="Send" />
         </div>
         <div style="float: right; ">
-          <button id="submit">Get</button>   
+          <input type="button" id="get" value="Get" />   
         </div>
         <div style="clear: both"></div>
     </body>
